# Physical-layer-simulation-tool-for-communication-systems

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  TODO.md  pyproject.toml  test.py
.github/workflows/: ci.yml
docs/: conf.py  getting_started.rst  index.rst  releasing.rst
docs/api/: channel.rst  index.rst  modulation.rst  plotting.rst  simulation.rst  theory.rst
docs/releases/: 0.1.0.rst  index.rst
examples/: bpsk_awgn.ipynb  bpsk_awgn_prototype.py  modulation_comparison.ipynb  qpsk_awgn.ipynb  rayleigh_comparison.ipynb
pyberlab/: __init__.py
pyberlab/channel/: __init__.py  awgn.py  rayleigh.py
pyberlab/modulation/: __init__.py  base.py  psk.py  qam.py
pyberlab/plot/: __init__.py  curves.py
pyberlab/simulation/: __init__.py  metrics.py  runner.py
pyberlab/theory/: __init__.py  ber.py
scripts/: check_distribution.py  release_smoke_test.py
tests/: test_channel.py  test_modulation.py  test_simulation.py  test_theory.py
