[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyberlab"
dynamic = ["version"]
description = "Physical layer BER simulation for communication systems"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff==0.15.22",
]
docs = [
    "sphinx>=7.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyberlab*"]

[tool.setuptools.dynamic]
version = { attr = "pyberlab.__version__" }

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]  # unused imports OK in test files

[tool.pytest.ini_options]
testpaths = ["tests"]
