[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyberlab"
dynamic = ["version"]
description = "Reproducible BER simulation for digital modulation over AWGN and Rayleigh channels"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Siwei Chen" },
]
requires-python = ">=3.9"
keywords = [
    "bit-error-rate",
    "communications",
    "digital-modulation",
    "monte-carlo-simulation",
    "signal-processing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff==0.15.22",
]
docs = [
    "sphinx>=7.2",
]
release = [
    "build>=1.2",
    "docutils>=0.21.2,<0.22",
    "packaging>=24,<26",
    "twine>=5.1",
]

[project.urls]
Homepage = "https://github.com/If-smile/A-reproducible-Python-laboratory-for-digital-modulation-BER-experiments"
Documentation = "https://github.com/If-smile/A-reproducible-Python-laboratory-for-digital-modulation-BER-experiments/tree/main/docs"
Repository = "https://github.com/If-smile/A-reproducible-Python-laboratory-for-digital-modulation-BER-experiments.git"
Issues = "https://github.com/If-smile/A-reproducible-Python-laboratory-for-digital-modulation-BER-experiments/issues"
Changelog = "https://github.com/If-smile/A-reproducible-Python-laboratory-for-digital-modulation-BER-experiments/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyberlab*"]

[tool.setuptools.dynamic]
version = { attr = "pyberlab.__version__" }

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]  # unused imports OK in test files

[tool.pytest.ini_options]
testpaths = ["tests"]
